
  CVE-2022-39046: When the syslog function is passed a crafted input
  string larger than 1024 bytes, it reads uninitialized memory from the
  heap and prints it to the target log file, potentially revealing a
  portion of the contents of the heap.

The following bugs are resolved with this release:

  [12154] Do not fail DNS resolution for CNAMEs which are not host names
  [28846] CMSG_NXTHDR may trigger -Wstrict-overflow warning
  [29305] Conserve NSS buffer space during DNS packet parsing
  [29415] nscd: Fix netlink cache invalidation if epoll is used
  [28937] New DSO dependency sorter does not put new map first if in a cycle
  [29446] _dlopen now ignores dl_caller argument in static mode
  [29485] Linux: Terminate subprocess on late failure in tst-pidfd
  [29490] alpha: New __brk_call implementation is broken
  [29463] math/test-float128-y1 fails on x86_64
  [29528] elf: Call __libc_early_init for reused namespaces
  [29537] libc: [2.34 regression]: Alignment issue on m68k when using
  [29539] libc: LD_TRACE_LOADED_OBJECTS changed how vDSO library are
  [29583] Use 64-bit interfaces in gconv_parseconfdir
  [29607] nscd repeatably crashes calling __strlen_avx2 when hosts cache is
    enabled
  [29638] libc: stdlib: arc4random fallback is never used

Version 2.36

Major new features:

* Support for DT_RELR relative relocation format has been added to
  glibc.  This is a new ELF dynamic tag that improves the size of
  relative relocations in shared object files and position independent
  executables (PIE).  DT_RELR generation requires linker support for
  -z pack-relative-relocs option, which is supported for some targets
  in recent binutils versions.  Lazy binding doesn't apply to DT_RELR.

* On Linux, the pidfd_open, pidfd_getfd, and pidfd_send_signal functions
  have been added.  The pidfd functionality provides access to a process
  while avoiding the issue of PID reuse on tranditional Unix systems.
